added image on each page

--- a/site/about/index.html
+++ b/site/about/index.html
@@ -7,6 +7,7 @@
 	
 	<body>
 		<div id="banner">
+			<img id="logo" src="../images/tokervape-icon.gif" alt="logo" />
 			<h1 id="textlogo">TokerVapes</h1>
 		</div>
 		
