--- a/site/index.html
+++ b/site/index.html
@@ -8,6 +8,7 @@
 	<body>
 		<div id="banner">
 		<!-- Main logo goes here -->
+			<img id="logo" src="images/tokervape-icon.gif" alt="logo" />
 			<h1 id="textlogo">TokerVapes</h1>
 		</div>
 		
