changes to images

--- a/site/about/index.html
+++ b/site/about/index.html
@@ -2,6 +2,7 @@
 
 	<head>
 		<title>TokerVapes - About</title>
+		<link rel="shortcut icon" href="../images/tokervape-icon.gif" />
 		<link href="../css/style.css" type="text/css" rel="stylesheet" />
 	</head>
 	
