--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,7 @@
 
 	<head>
 		<title>TokerVapes - Home</title>
+		<link rel="shortcut icon" href="images/tokervape-icon.gif" />
 		<link href="css/style.css" type="text/css" rel="stylesheet" />
 	</head>
 	
